--- a/Machine Learning/Machine learning 101 - Simple vs Multiple Linear regression.ipynb
+++ b/Machine Learning/Machine learning 101 - Simple vs Multiple Linear regression.ipynb
@@ -693,7 +693,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Multiplr linear regression:"
+    "#### Multiple linear regression:"
    ]
   },
   {
