Update Machine learning 101 - Simple vs Multiple Linear regression.ipynb

--- a/Machine Learning/Machine learning 101 - Simple vs Multiple Linear regression.ipynb
+++ b/Machine Learning/Machine learning 101 - Simple vs Multiple Linear regression.ipynb
@@ -878,7 +878,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Linear regression isn't the best model for stock price prediction nor is it good for time series tasks ,even if our model performs well on the testing set it doesn't mean it will perform well in real world, predicting stock prices need more than 5 variables it sometimes need dozens if not hundreds of variables to get an accurate prediction of the market stock prices."
+    "Linear regression isn't the best model for stock price prediction nor is it good for time series tasks in general ,even if our model performs well on the testing set it doesn't necessarily mean it will perform well in real world, predicting stock prices need more than 3 to 5 variables, it actually need dozens if not hundreds of variables to get an accurate prediction of the market stock prices."
    ]
   }
  ],
